src/resources/grammar.txt
expression     → literal
               | unary
               | binary
               | grouping ;

literal        → NUMBER | STRING | "true" | "false" | "nil" ;
grouping       → "(" expression ")" ;
unary          → ( "-" | "!" ) expression ;
binary         → expression operator expression ;
operator       → "==" | "!=" | "<" | "<=" | ">" | ">="
               | "+"  | "-"  | "*" | "/" ;

Name       |Operators |	Associates
--------------------------------
Equality	== !=	    Left
Comparison	> >= < <=	Left
Term	    - +	        Left
Factor	    / *	        Left
Unary	    ! -	        Right
Comma       ,           Left

------------------------ RULES WITH PRECEDENCE (lowest to highest) ---------------------------

program       -> declaration* EOF ;
declaration   -> varDeclare | statement | funDeclare ;
varDeclare    -> "var" IDENTIFIER ( "=" expression )? ";" ;
statement     -> exprStmt | printStmt | block | ifStmt | forStmt | returnStmt;
returnStmt    -> "return" expression? ";" ;
forStmt       -> "for" "(" ( varDeclare | exprStmt | ";" ) expression? ";" expression? ")" statement ;
while         -> "while" "(" expression ")" statement ;
block         -> "{" declaration* "}" ;
ifStm         -> "if" "(" expression ")" statement ( "else" statement )? ;
exprStmt      -> expression ";" ;
printStmt     -> "print" expression ";" ;
expression    -> Comma
Comma         -> assignment ( "," assignment )* ;
assignment    -> IDENTIFIER ( ( "=" | "+=" | "*=" | "/=") assignment | ternary ;
ternary       -> equality ( "?" expression ":" ternary)? ;
logic_or      -> logic_and ( "or" logic_and )* ;
logic_and     -> equality ( "and" equality )* ;
equality      -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison    -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term          -> factor ( ( "-" | "+" ) factor )* ;
factor        -> unary ( "/" | "*" ) unary | unary ;
unary         -> ( "!" | "-" ) unary | call ;
call          -> primary ( "(" arguments? ")" )* ;
arguments     -> expression ( "," expression )* ;
funDecl       -> "fun" function ;
function      -> IDENTIFIER "(" parameters? ")" block ;
parameters    -> IDENTIFIER ( "," IDENTIFIER )* ;
primary       -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER ;
